// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default renders correctly 1`] = `
<div>
  <h1>
    Stats for 
    Test Season
  </h1>
  <button
    className="button-chart-type"
    onClick={[Function]}
  >
    See game-by-game
  </button>
  <button
    className="button-chart-type"
    onClick={[Function]}
  >
    See incrementally
  </button>
  &lt;MockChart /&gt;
</div>
`;

exports[`only 3 teams are shown 1`] = `
<div>
  <h1>
    Stats for 
    Second Season
  </h1>
  <button
    className="button-chart-type"
    onClick={[Function]}
  >
    See game-by-game
  </button>
  <button
    className="button-chart-type"
    onClick={[Function]}
  >
    See incrementally
  </button>
  &lt;MockChart /&gt;
</div>
`;
